[package]
name = "brickatlas"
description = "Warns you before bricking your PoE atlas"
version = "0.1.0"
authors = ["Richard Poettler <richard.poettler@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "3.6.3"
notify = "4.0.15"
