[package]
name = "brickatlas"
description = "Warns you before bricking your PoE atlas"
version = "0.1.0"
authors = ["Richard Poettler <richard.poettler@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "3.6.3"
notify = "4.0.17"
clap = "2.34.0"
serde = { version = "1.0.145", features = ["derive"] }
toml = "0.5.9"
regex = "1.6.0"
lazy_static = "1.4.0"
dirs = "4.0.0"
