[package]
name = "brickatlas"
description = "Warns you before bricking your PoE atlas"
version = "0.1.0"
authors = ["Richard Poettler <richard.poettler@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4.8.0"
notify = "5.1.0"
clap = "2.34.0"
serde = { version = "1.0.160", features = ["derive"] }
toml = "0.5.11"
regex = "1.8.1"
lazy_static = "1.4.0"
dirs = "4.0.0"
